--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,5 @@ authors = ["Antti Keränen <detegr@gmail.com>"]
 [dependencies]
 nom = "*"
 unix_socket = "0.3.2"
-
-[dependencies.ctrlc]
-git = "https://github.com/Detegr/rust-ctrlc"
+ctrlc = "*"
+bufstream = "*"
