--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ ctrlc = "*"
 time = "0.1.35"
 timer = "0.1.6"
 unix_socket = "^0.4"
+rustc-serialize = "0.3"
+toml = "0.2"
 
 [features]
 default = ["unix_socket/socket_timeout"]
